js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-function-typeof-import.js
DONOTEVALUATE
(
)
;
async
function
f
(
)
{
typeof
import
;
}
